# office_project

./: db.sqlite3  pyproject.toml
api/: admin.py  exceptions.py  filters.py  models.py  move_storage.py  permissions.py  serializers.py  urls.py  validators.py  views.py
api/migrations/: 0001_initial.py  0002_alter_officeuser_options.py  0003_alter_officeuser_date_joined_and_more.py  0004_alter_officeuser_role.py  0005_application_report_alter_officeuser_role.py  0006_application_author_client.py  0007_alter_officeuser_role.py  0008_storage.py  0009_storage_password_storage_user.py  0010_alter_storage_column.py  0011_alter_application_storage_name_from_and_more.py  0012_alter_application_storage_name_from_and_more.py
office/: settings.py  urls.py
